# talk-to-me

./: LICENSE.md  README.md  pyproject.toml
hardware/: audio.py
nn/tasks/: llm.py  speech_to_text.py
